=== Safari-84 ===

2003-06-12  David Hyatt  <hyatt@apple.com>

	Fix for 3289113, body.scrollTop doesn't return the right
	value.  Fix scrollLeft and scrollTop for body tags to just
	use the view's offset.  This matches WinIE behavior.
	
        Reviewed by john

        * khtml/ecma/kjs_html.cpp:
        (KJS::HTMLElement::getValueProperty):
        (KJS::HTMLElement::putValue):
        * khtml/ecma/kjs_html.h:
        * khtml/ecma/kjs_html.lut.h:

2003-06-12  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- fixed 3289405 -- repro crash in KWQPopUpButtonCell at umax.de

        * kwq/KWQComboBox.mm: (-[KWQPopUpButtonCell trackMouse:inRect:ofView:untilMouseUp:]):
        Use the bridge that we got earlier in the function to find the right part. This is
        simpler, and more reliable. The old way would run into trouble if the widget or
        any of the other objects in the chain got destroyed during the event handling.

2003-06-12  Darin Adler  <darin@apple.com>

        Fixed by Richard, reviewed by me.

	- fixed 3289047 -- REGRESSION: can't go back after using form at attwireless.com

        * khtml/khtmlpart_p.h: Add an "executing JavaScript form action" flag.
        * kwq/WebCoreBridge.h: Add an "executing JavaScript form action" flag parameter to
        the reportClientRedirectToURL method.

        * khtml/khtml_part.cpp: (KHTMLPart::submitForm): In the JavaScript case, set a
        flag to say we are executing a JavaScript form action.
        * kwq/KWQKHTMLPart.mm: (KWQKHTMLPart::redirectionTimerStartedOrStopped): Pass the
        isJavaScriptFormAction state over the bridge.

2003-06-11  David Hyatt  <hyatt@apple.com>

	Fix for 3288875, :after/:before content not getting destroyed
	after printing on alistapart.com.  Make the update method for
	pseudos smart enough to destroy generated content when it is
	no longer needed.
	
        Reviewed by darin

        * khtml/rendering/render_block.cpp:
	(RenderBlock::setStyle);